--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel/scout": "^7.1"
+        "laravel/scout": "^7.1",
+        "spatie/array-to-xml": "^2.9"
     },
     "autoload": {
         "psr-4": {
